# Scientific_Computing_Project

./: .gitignore  Readme.md  package-lock.json  package.json
assets/: algorithm_comparison_summary.csv
data_analysis/: README.md  analysis.py  data_dens18_size2-8.csv  visualization.py
data_analysis/analyzed_csv/: board_difficulty.csv  efficiency_on_wins.csv  loss_quality.csv  objective_sensitivity.csv  pareto_fronts.csv  runs_cleaned.csv  seed_stability.csv  summary.csv
engine/: 3 version.txt  Cargo.toml  Readme.md  fixed_benchmarking_10%.csv  fixed_benchmarking_15.csv  fixed_benchmarking_18.csv  fixed_benchmarking_18_corrected.csv
engine/src/: board.rs  lib.rs  main.rs  simulator.rs
engine/src/algorithms/: exact_solver.rs  greedy.rs  local_search.rs  macros.rs  metaheuristic.rs  mod.rs  sat_global.rs  sat_partitioned.rs  sat_solver.rs  sat_solver_4d.rs  sat_utils.rs  scip_solver.rs  tsp_optimizer.rs
frontend/: README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/public/: _headers
frontend/src/: App.css  App.tsx  index.css  index.html  minesweeper.ts
frontend/src/components/: AdvancedSettings.tsx  AlgorithmSelector.css  AlgorithmSelector.tsx  BoardView.css  BoardView.tsx  CellComponent.tsx  ConfigActions.tsx  Controls.css  Controls.tsx  Header.tsx  HyperplaneView.tsx  InteractiveNDBoard.tsx  Menu.tsx  PresetSelector.tsx  ResultView.css  ResultView.tsx  StatusBar.tsx  ThreeDBoardView.tsx  (+1 more)
runner/: Cargo.toml  readme.md
runner/data/: fixed_benchmarking_18_corrected.csv
runner/results/: all_algos_final.csv  fixed_benchmarking_18.csv  test.txt
runner/src/: main.rs
(+38 files in other folders)
