[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.5.0"
rand = "0.8"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
itertools = "0.14.0"
russcip = "0.9.1"
scip-sys = { version = "0.1.26", optional = true }

[profile.release]
lto = true
opt-level = "s"
